--- a/doc.html
+++ b/doc.html
@@ -66,8 +66,7 @@
 </tbody></table>
 
 <h3>Video</h3>
-
-<p>Pøilo¾te odkaz na komentované video demostrující pou¾ití informaèního systému. Zamìøte se na pøípady u¾ití definované zadáním (napø. registrace u¾ivatele, správa u¾ivatelù a èinnosti jednotlivých rolí). Video nahrajte napøíklad na VUT Google Drive, kde ho bude mo¾né pøímo spustit z odkazu.</p>
+<a href="https://photos.app.goo.gl/d2AzMj458Zz2DYif7">https://photos.app.goo.gl/d2AzMj458Zz2DYif7</a>
 
 <h2>Implementace</h2>
 <p>V systému jsou tyto entity:</p>
