--- a/doc.html
+++ b/doc.html
@@ -88,8 +88,15 @@
 ¾e nemù¾e provést nìjakou akci.</p>
 
 
+<h3>UI</h3>
+<p>Ka¾dý jednotlivý prvek - listy, tabulky, formuláøe, atd. je vytvoøen jako samostatná, logická komponenta v umístìní
+<i>app/UI/Components</i>. </p>
 
+<p>Díky tomu nám bylo umo¾nìno pou¾ívat jednotlivé komponenty na více místech, napø. zobrazit
+nejpopulárnìj¹í prezentace na hlavní stránce, prezentace pro danou konferenci, nebo prezentace vytvoøené u¾ivatelem.</p>
 
+<p>Komponenty jsou logicky pojmenované podle názvu entity a post-fixu, nejèastìji <i>Form, Grid, List</i>. To umo¾òuje
+rychlou a jednoduchou navigaci a roz¹iøitelnost.</p>
 
 
 <h3>Databáze</h3>
